--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
     "next-sitemap": "^4.0.0",
-    "@next/bundle-analyzer": "^13.4.0"
+    "@next/bundle-analyzer": "^13.4.0",
+    "prettier": "^3.0.0"
   },
   "devDependencies": {
     "prettier": "^3.0.0",
