--- a/package.json
+++ b/package.json
@@ -3,37 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "npm run copy-images && next dev",
+    "build": "npm run copy-images && next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
     "clean": "rm -rf .next out",
     "prebuild": "npm run clean",
     "postbuild": "next-sitemap",
-    "analyze": "ANALYZE=true next build"
+    "analyze": "ANALYZE=true next build",
+    "copy-images": "ts-node scripts/copy-images.ts"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/bundle-analyzer": "^13.4.0",
+    "@next/mdx": "^13.4.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.0",
+    "gray-matter": "^4.0.3",
     "next": "^13.4.0",
+    "next-sitemap": "^4.0.0",
+    "postcss": "^8.4.0",
+    "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.0.0",
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.4.0",
-    "gray-matter": "^4.0.3",
     "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "next-sitemap": "^4.0.0",
-    "@next/bundle-analyzer": "^13.4.0",
-    "prettier": "^3.0.0"
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
     "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.5.14"
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "ts-node": "^10.9.2"
   }
 }
